.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Updated author.pt to follow general markup conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter]

- Updated templates to fill 'main' slot with <metal:main fill-slot='main'>
  construction instead of <div metal:fill-slot="main" tal:omit-tag="">
  [spliter]

- Re-factored plone_prefs/ templates to follow the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter] 

- Added 'All content' blog like view for folderish types.
  [elro]

- Re-factored folder listing and summary view.
  [elro]

- Updated templates to disable the columns with 'disable_MANAGER_NAME'
  pattern.
  [spliter]

- Add current portal type to the body css class like the section
  and template css class's.
  Refs https://dev.plone.org/plone/ticket/8777.
  [pelle]

- Deprecate the portlets_fetcher and macro_renderer templates.
  [davisagli]

- Clean up various HTML comments that were being emitted unnecessarily.
  [davisagli]

- On the Zope overview screen, make sure the user is authenticated at the Zope
  root before sending them to the upgrade view for a Plone site, when the Upgrade
  button is clicked.  This closes http://dev.plone.org/plone/ticket/10154.
  [davisagli]

- Increased maximum length of the sortable_title index from 40 to 70 characters
  to match truncation rules of most search engines. This closes
  http://dev.plone.org/plone/ticket/10170.
  [hannosch]

- Restrict manage_options on the catalog to supported and useful options.
  [hannosch]

- Re-factored all templates to follow the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter]

- Register common CSS resources as blank files here. Other themes are
  supposed to override them to style the site appropiately.